@@ -1,3 +1,10 @@
+Wed Sep 24 15:23:19 UTC 2008  Steven Stallion  <stallions@ociweb.com>
+
+        * java/tests/messenger/publisher/run_test.pl:
+        * java/tests/messenger/subscriber/run_test.pl:
+
+          Updated transport tests to disable BITs.
+
 Tue Sep 23 20:28:34 UTC 2008  Steven Stallion  <stallions@ociweb.com>
 
         * java/tests/dcps_java_tests.lst:
